# DRF_HW

./: README.md  course_fixture.json  lesson_fixture.json  payment_fixture.json  pyproject.toml  user_fixture.json
Ims/: Serializers.py  admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  views.py
Ims/migrations/: 0001_initial.py  0002_course_owner_alter_lesson_owner.py  0003_lesson_video.py  0004_subscription.py  0005_alter_lesson_preview.py
config/: settings.py  urls.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: createpayment.py  csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_payment_link_to_pay_payment_session_id_and_more.py  0004_rename_link_to_pay_payment_link.py
